--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="card">
           <h1>Hello, I'm Marianna</h1>
           <h2>Web Developer 💻</h2>
-          <img class="image-center" src="/images/IMG_3132.jpg" alt="Marianna's photo" width="300px" height="300px">
+          <img class="image-center" src="images/IMG_3132.jpg" alt="Marianna's photo" width="300px" height="300px">
           <p>Trying to survive the bootcamp</p>
           <form>
             <input type="submit" value="Discover my work">
